[package]
name = "everything_db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies] # need to remove unused features
near-sdk = "4.1.1"
serde_json = "1"
jsonschema-valid = { version = "0.5.2", default-features = false, optional = false }
schemars = { version = "0.8.16", default-features = false, optional = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
